// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test cases for Perspective details Page should be able to render no data page 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                enable-background="new 0 0 8 14"
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/ce/perspectives"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                ce.perspectives.sideNavText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                enable-background="new 0 0 8 14"
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        AWS_GCP
      </h2>
    </div>
    <div
      class="StyledProps--font StyledProps--main headerContentSection StyledProps--padding-top-xlarge StyledProps--padding-left-xsmall"
    >
      <div
        class="StyledProps--font StyledProps--main headerContent"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
          data-icon="notification"
        >
          <svg
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12v-.793l.881-.881.721-.721.002-.002-.007-.006A3.968 3.968 0 014 7.5a4 4 0 118 0c0 .77-.22 1.488-.597 2.097l-.007.007.002.001.721.721.881.881V12H3zm5 2a1 1 0 01-1-1h2a1 1 0 01-1 1zm5.854-3.354l-1.236-1.235A4.954 4.954 0 0013 7.5a5.006 5.006 0 00-4.5-4.974V1.5h-1v1.026A5.006 5.006 0 003 7.5c0 .677.136 1.322.382 1.911l-1.236 1.235A.5.5 0 002 11v2h4c0 1.103.897 2 2 2s2-.897 2-2h4v-2a.5.5 0 00-.146-.354z"
              fill="#000"
              fill-rule="nonzero"
              opacity="0.6"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-left-xsmall StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
        >
          ce.perspectives.perspectiveReportsTxt
        </p>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
        icon="edit"
      >
        <svg
          data-icon="edit"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            edit
          </desc>
          <path
            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        edit
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-small StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ng-filter"
        >
          <svg
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 8V7H19a.5.5 0 0 0 0-1h-2.5V5a.5.5 0 0 0-1 0v1H5a.5.5 0 0 0 0 1h10.5v1a.5.5 0 0 0 1 0zM5 11.5h3v-1a.5.5 0 0 1 1 0v1h10a.5.5 0 0 1 0 1H9v1a.5.5 0 0 1-1 0v-1H5a.5.5 0 0 1 0-1zM5 17a.5.5 0 0 0 0 1h7v1a.5.5 0 0 0 1 0v-1h6a.5.5 0 0 0 0-1h-6v-1a.5.5 0 0 0-1 0v1H5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <section
            class="filtersContainer"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + add filter
              </span>
            </button>
          </section>
        </div>
        <span
          style="flex-grow: 1;"
        />
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    calendar
                  </desc>
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
        >
          |
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeGranularityButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeAggregation.daily
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--margin-xlarge"
    >
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card cardContainer"
      >
        <div
          class="StyledProps--font StyledProps--main budgetCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-small"
          >
            ce.perspectives.budgets.title
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium"
          >
            $---
          </p>
          <p
            class="StyledProps--font StyledProps--main addBudgetText StyledProps--color StyledProps--color-primary7 StyledProps--font-small"
          >
            ce.perspectives.budgets.addBudget
          </p>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
          >
            ce.recommendation.sideNavText
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-medium StyledProps--margin-bottom-small StyledProps--font-variation-body1"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
              data-icon="money-icon"
            >
              <svg
                fill="none"
                height="21"
                viewBox="0 0 34 31"
                width="21"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="Money Icon"
                >
                  <ellipse
                    fill="#EFF2F4"
                    id="Oval"
                    rx="15.5165"
                    ry="2.31097"
                    transform="matrix(1 0 0 -1 15.5165 27.9595)"
                  />
                  <g
                    id="Group 21"
                  >
                    <rect
                      fill="#629D00"
                      height="12.1968"
                      id="Rectangle"
                      rx="4"
                      stroke="#629D00"
                      width="25.0905"
                      x="1.32056"
                      y="15.0841"
                    />
                    <rect
                      fill="#69C800"
                      height="12.1968"
                      id="Rectangle_2"
                      rx="4"
                      width="25.0905"
                      x="1.32056"
                      y="15.0841"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.68568"
                      id="Rectangle_3"
                      rx="4"
                      width="22.9997"
                      x="2.50513"
                      y="16.4476"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M6.22638 15.5146C4.01724 15.5146 2.22638 17.3055 2.22638 19.5146V20.2946C2.29322 18.1441 4.05762 16.4212 6.22442 16.4212H21.5722C23.7814 16.4212 25.5722 18.2121 25.5722 20.4212V24.1516C25.5735 24.1096 25.5742 24.0674 25.5742 24.0251V19.5146C25.5742 17.3055 23.7833 15.5146 21.5742 15.5146H6.22638Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape"
                    />
                    <ellipse
                      cx="5.92016"
                      cy="21.3074"
                      fill="#7ACE00"
                      id="Oval_2"
                      rx="1.39392"
                      ry="1.43492"
                    />
                    <ellipse
                      cx="22.0898"
                      cy="21.2734"
                      fill="#7ACE00"
                      id="Oval_3"
                      rx="1.39392"
                      ry="1.43492"
                    />
                    <ellipse
                      cx="14.1441"
                      cy="21.3984"
                      fill="#7ACE00"
                      id="Oval_4"
                      rx="3.4848"
                      ry="3.58729"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.9689 21.7227C15.9305 21.6084 15.8728 21.5016 15.796 21.4025C15.7192 21.3034 15.6232 21.2158 15.508 21.1357C15.3927 21.0595 15.2583 20.9985 15.1047 20.9528C15.0432 20.9375 14.9395 20.9109 14.7974 20.8766C14.6629 20.8423 14.517 20.8079 14.3672 20.7698C14.2174 20.7317 14.083 20.6974 13.96 20.6669C13.841 20.6364 13.7718 20.6212 13.7526 20.6174C13.5875 20.5716 13.453 20.5068 13.3493 20.4192C13.2456 20.3315 13.1957 20.2095 13.1957 20.0571C13.1957 19.9466 13.2226 19.8551 13.2764 19.7827C13.3301 19.7102 13.3993 19.6531 13.4838 19.6073C13.5683 19.5654 13.6605 19.5349 13.7603 19.5159C13.8602 19.4968 13.96 19.4854 14.0561 19.4854C14.3403 19.4854 14.5746 19.5425 14.759 19.6607C14.9433 19.775 15.047 19.977 15.0701 20.2553H15.892C15.892 20.0266 15.8421 19.8246 15.7461 19.6531C15.6501 19.4815 15.5195 19.3329 15.3543 19.2147C15.1892 19.0966 14.9971 19.0089 14.782 18.9479C14.6898 18.9251 14.5938 18.9098 14.4939 18.8946V18.4791C14.4939 18.2695 14.3211 18.098 14.1098 18.098C13.8986 18.098 13.7257 18.2695 13.7257 18.4791V18.8908C13.6374 18.9022 13.5491 18.9174 13.4646 18.9403C13.2572 18.9899 13.0728 19.0699 12.9115 19.1728C12.7501 19.2795 12.6196 19.4129 12.5197 19.573C12.4198 19.7369 12.3699 19.9275 12.3699 20.1447C12.3699 20.2591 12.3853 20.3696 12.4198 20.4802C12.4544 20.5907 12.5082 20.6936 12.5888 20.7927C12.6695 20.8918 12.7732 20.9795 12.9076 21.0595C13.0421 21.1395 13.2111 21.2043 13.4108 21.2539C13.7373 21.3339 14.01 21.3987 14.2328 21.4521C14.4555 21.5016 14.6476 21.5588 14.8166 21.6122C14.9126 21.6465 15.0006 21.6998 15.0812 21.7799C15.1623 21.8599 15.2045 21.9823 15.2045 22.1496C15.2045 22.2296 15.1853 22.3097 15.1507 22.3897C15.1162 22.4698 15.0586 22.5388 14.9779 22.5994C14.8972 22.6603 14.7974 22.7099 14.6668 22.748C14.54 22.7861 14.3864 22.8052 14.2059 22.8052C14.0407 22.8052 13.8832 22.7861 13.7411 22.7518C13.599 22.7175 13.4722 22.6603 13.3609 22.5883C13.2495 22.5117 13.165 22.4164 13.1035 22.2982C13.0421 22.1801 13.0113 22.0391 13.0113 21.8717H12.1932C12.197 22.1424 12.2508 22.3745 12.3584 22.5727C12.4621 22.7709 12.6042 22.931 12.7809 23.0567C12.9576 23.1825 13.1611 23.2778 13.3993 23.3388C13.503 23.3658 13.6144 23.3845 13.7257 23.3998V23.8152C13.7257 24.0249 13.8986 24.1964 14.1098 24.1964C14.3211 24.1964 14.4939 24.0249 14.4939 23.8152V23.415C14.6092 23.4036 14.7282 23.3845 14.8396 23.3578C15.0624 23.3083 15.2621 23.2282 15.4388 23.1177C15.6155 23.0072 15.7576 22.8662 15.8648 22.6946C15.9727 22.5235 16.0265 22.3135 16.0265 22.0696C16.0265 21.9518 16.0073 21.8371 15.9689 21.7227Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1"
                    />
                  </g>
                  <g
                    id="Group 21_2"
                  >
                    <rect
                      fill="#629D00"
                      height="11.9776"
                      id="Rectangle_4"
                      rx="4"
                      stroke="#629D00"
                      transform="rotate(21 6.63019 7.33658)"
                      width="25.1192"
                      x="6.63019"
                      y="7.33658"
                    />
                    <rect
                      fill="#69C800"
                      height="11.9776"
                      id="Rectangle_5"
                      rx="4"
                      transform="rotate(21 6.63019 7.33658)"
                      width="25.1192"
                      x="6.63019"
                      y="7.33658"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.51161"
                      id="Rectangle_6"
                      rx="4"
                      transform="rotate(21 7.25751 9.01164)"
                      width="23.026"
                      x="7.25751"
                      y="9.01164"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.0596 9.48977C8.99717 8.69808 6.68347 9.7282 5.89179 11.7906L5.61835 12.5029C6.45167 10.5196 8.71602 9.54376 10.7387 10.3202L25.092 15.8299C27.1545 16.6216 28.1846 18.9353 27.3929 20.9977L26.1305 24.2863C26.1469 24.2474 26.1627 24.208 26.178 24.1683L27.7138 20.1673C28.5055 18.1049 27.4753 15.7912 25.4129 14.9995L11.0596 9.48977Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape_2"
                    />
                    <ellipse
                      cx="8.73906"
                      cy="14.6924"
                      fill="#7ACE00"
                      id="Oval_5"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(21 8.73906 14.6924)"
                    />
                    <ellipse
                      cx="23.8639"
                      cy="20.4625"
                      fill="#7ACE00"
                      id="Oval_6"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(21 23.8639 20.4625)"
                    />
                    <ellipse
                      cx="16.3936"
                      cy="17.7263"
                      fill="#7ACE00"
                      id="Oval_7"
                      rx="3.48878"
                      ry="3.52282"
                      transform="rotate(21 16.3936 17.7263)"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M17.9849 18.6784C17.9892 18.5598 17.9729 18.4412 17.936 18.3228C17.8991 18.2044 17.8402 18.0896 17.7606 17.9749C17.6798 17.8636 17.5756 17.7595 17.4481 17.6624C17.396 17.6264 17.3085 17.5648 17.1877 17.4823C17.0741 17.4026 16.9498 17.3188 16.8232 17.2301C16.6966 17.1414 16.583 17.0618 16.4789 16.9897C16.3783 16.919 16.3191 16.8803 16.3025 16.8699C16.1642 16.7687 16.0614 16.661 15.9953 16.5435C15.9292 16.4259 15.9255 16.2961 15.9791 16.1564C16.018 16.055 16.0753 15.9808 16.1511 15.9337C16.2268 15.8866 16.3116 15.859 16.4066 15.8474C16.5004 15.8393 16.5973 15.8444 16.6973 15.8627C16.7974 15.8811 16.8947 15.9064 16.9845 15.9409C17.2501 16.0429 17.449 16.1794 17.5797 16.3538C17.7118 16.5248 17.7376 16.7472 17.6613 17.0106L18.4295 17.3055C18.51 17.0958 18.5344 16.8927 18.505 16.701C18.4756 16.5093 18.4059 16.3262 18.2931 16.1586C18.1803 15.991 18.0317 15.8417 17.8521 15.7086C17.774 15.6546 17.6896 15.6062 17.6016 15.5564L17.7478 15.1755C17.8216 14.9833 17.7204 14.764 17.523 14.6882C17.3255 14.6124 17.1036 14.7077 17.0298 14.8999L16.885 15.2773C16.7984 15.2561 16.7105 15.2383 16.6234 15.229C16.4121 15.2 16.2116 15.2072 16.0247 15.2437C15.8363 15.2837 15.6673 15.3591 15.5176 15.47C15.3666 15.5845 15.2529 15.7413 15.1764 15.9405C15.1362 16.0453 15.1116 16.1521 15.105 16.2659C15.0985 16.3796 15.1125 16.4933 15.153 16.6131C15.1935 16.7329 15.2596 16.8504 15.3571 16.972C15.4546 17.0937 15.5897 17.2137 15.759 17.3308C16.0359 17.5213 16.268 17.6785 16.4575 17.8074C16.6482 17.9327 16.8076 18.0541 16.9468 18.1636C17.0245 18.2295 17.0879 18.31 17.1351 18.4123C17.1827 18.5148 17.1791 18.6421 17.1202 18.7955C17.0921 18.8689 17.046 18.9354 16.9855 18.9964C16.925 19.0573 16.8469 19.0999 16.7502 19.1265C16.6533 19.1535 16.5425 19.1631 16.4071 19.1512C16.2752 19.1407 16.1249 19.103 15.9561 19.0383C15.8018 18.979 15.6613 18.905 15.5405 18.8226C15.4198 18.7402 15.3214 18.6423 15.2427 18.5363C15.1655 18.4261 15.1201 18.3084 15.1042 18.178C15.0884 18.0476 15.1093 17.9073 15.1682 17.7539L14.4035 17.4604C14.3119 17.7099 14.2804 17.942 14.3112 18.1623C14.3384 18.3812 14.4149 18.5789 14.5357 18.7576C14.6566 18.9363 14.8133 19.0967 15.0145 19.2381C15.1019 19.3001 15.1994 19.3572 15.2981 19.4111L15.1519 19.792C15.0782 19.9842 15.1793 20.2035 15.3768 20.2793C15.5742 20.355 15.7961 20.2598 15.8699 20.0676L16.0108 19.7007C16.1225 19.7316 16.2405 19.7568 16.354 19.7723C16.5796 19.8068 16.7945 19.8051 16.9985 19.7671C17.2026 19.7292 17.385 19.6509 17.5455 19.5321C17.7066 19.4139 17.8308 19.2407 17.9167 19.017C17.9581 18.9091 17.9805 18.797 17.9849 18.6784Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1_2"
                    />
                  </g>
                  <g
                    id="Group 21_3"
                  >
                    <rect
                      fill="#629D00"
                      height="11.9776"
                      id="Rectangle_7"
                      rx="4"
                      stroke="#629D00"
                      transform="rotate(52 17.5758 1)"
                      width="25.1192"
                      x="17.5758"
                      y="1"
                    />
                    <rect
                      fill="#69C800"
                      height="11.9776"
                      id="Rectangle_8"
                      rx="4"
                      transform="rotate(52 17.5758 1)"
                      width="25.1192"
                      x="17.5758"
                      y="1"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.51161"
                      id="Rectangle_9"
                      rx="4"
                      transform="rotate(52 17.2508 2.75891)"
                      width="23.026"
                      x="17.2508"
                      y="2.75891"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2636 5.12695C18.9035 3.38613 16.3897 3.07747 14.6489 4.43755L14.0474 4.9075C15.7832 3.63641 18.2269 3.96613 19.5608 5.67349L29.0263 17.7888C30.3864 19.5296 30.0778 22.0434 28.3369 23.4035L25.5613 25.572C25.5954 25.5471 25.6291 25.5216 25.6626 25.4954L29.0397 22.8569C30.7805 21.4969 31.0892 18.9831 29.7291 17.2422L20.2636 5.12695Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape_3"
                    />
                    <ellipse
                      cx="15.595"
                      cy="8.3913"
                      fill="#7ACE00"
                      id="Oval_8"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(52 15.595 8.3913)"
                    />
                    <ellipse
                      cx="25.5876"
                      cy="21.1272"
                      fill="#7ACE00"
                      id="Oval_9"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(52 25.5876 21.1272)"
                    />
                    <ellipse
                      cx="20.5935"
                      cy="14.9343"
                      fill="#7ACE00"
                      id="Oval_10"
                      rx="3.48878"
                      ry="3.52282"
                      transform="rotate(52 20.5935 14.9343)"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M21.4672 16.5699C21.532 16.4705 21.5791 16.3605 21.6085 16.24C21.6378 16.1195 21.6464 15.9907 21.6374 15.8514C21.6253 15.7144 21.5897 15.5715 21.5304 15.4226C21.5043 15.3649 21.461 15.267 21.4 15.1341C21.3436 15.0073 21.2802 14.8714 21.2174 14.7302C21.1546 14.589 21.0982 14.4622 21.0461 14.3468C20.9963 14.2344 20.9655 14.1707 20.9566 14.1532C20.8902 13.9953 20.8575 13.85 20.8614 13.7152C20.8653 13.5804 20.9289 13.4673 21.0469 13.3751C21.1324 13.3083 21.2198 13.2742 21.309 13.2728C21.3982 13.2715 21.485 13.2914 21.5725 13.3304C21.657 13.3718 21.7374 13.426 21.8137 13.4933C21.89 13.5606 21.9604 13.6324 22.0196 13.7082C22.1948 13.9324 22.295 14.1518 22.3172 14.3687C22.3423 14.5833 22.2499 14.7873 22.0488 14.9737L22.5554 15.6221C22.7324 15.4838 22.858 15.3223 22.9315 15.1429C23.0051 14.9634 23.0396 14.7705 23.0292 14.5688C23.0189 14.367 22.9683 14.1625 22.8829 13.956C22.8438 13.8694 22.7964 13.7845 22.7467 13.6965L23.0682 13.4453C23.2304 13.3185 23.2566 13.0785 23.1264 12.9118C22.9962 12.7451 22.7569 12.7125 22.5947 12.8392L22.2761 13.0881C22.2128 13.0253 22.1466 12.9649 22.0768 12.912C21.9106 12.7783 21.7351 12.6813 21.556 12.6162C21.374 12.5535 21.1902 12.5311 21.0048 12.5491C20.8164 12.5694 20.6382 12.6453 20.47 12.7766C20.3816 12.8457 20.3055 12.9247 20.2413 13.0188C20.177 13.1129 20.1305 13.2175 20.1036 13.3411C20.0766 13.4646 20.0727 13.5994 20.0936 13.7539C20.1145 13.9083 20.1685 14.0808 20.2533 14.2684C20.3926 14.5743 20.5105 14.8287 20.6066 15.0367C20.7055 15.2424 20.7797 15.4284 20.8425 15.594C20.8752 15.6905 20.8881 15.7922 20.8759 15.9042C20.8639 16.0165 20.7952 16.1238 20.6658 16.225C20.6038 16.2734 20.53 16.3066 20.4468 16.3278C20.3636 16.3489 20.2747 16.3451 20.178 16.3181C20.0811 16.2914 19.9812 16.2426 19.8713 16.1626C19.7636 16.0856 19.6542 15.9759 19.5429 15.8335C19.4411 15.7032 19.3588 15.5675 19.2977 15.4346C19.2367 15.3018 19.2028 15.1672 19.1899 15.0358C19.1805 14.9016 19.2022 14.7773 19.2557 14.6574C19.3093 14.5375 19.3995 14.4279 19.529 14.3268L19.0247 13.6814C18.8177 13.848 18.6712 14.0308 18.5841 14.2354C18.4946 14.4371 18.4584 14.646 18.4699 14.8614C18.4815 15.0768 18.5332 15.2951 18.6328 15.5198C18.6758 15.618 18.73 15.7171 18.7869 15.8142L18.4654 16.0654C18.3031 16.1922 18.2769 16.4322 18.4072 16.5989C18.5374 16.7655 18.7766 16.7982 18.9388 16.6715L19.2485 16.4295C19.3284 16.5135 19.4166 16.5959 19.5059 16.6676C19.6815 16.8134 19.8666 16.9226 20.061 16.9952C20.2554 17.0677 20.4522 17.0946 20.6509 17.0754C20.8499 17.0571 21.0456 16.9726 21.2343 16.8251C21.3255 16.7539 21.4024 16.6694 21.4672 16.5699Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1_3"
                    />
                  </g>
                </g>
              </svg>
            </span>
            $--
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-tiny"
          >
            no Recommendations yet
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main chartGridContainer emptyContainer StyledProps--margin-xlarge StyledProps--background-white"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
      >
        <div
          class="StyledProps--font StyledProps--main groupByContainer StyledProps--background-white StyledProps--padding-small"
        >
          <section
            class="groupByContainer"
          >
            <label
              class="groupByLabel"
            >
               
              ce.perspectives.createPerspective.preview.groupBy
            </label>
            <div
              class="groupBys"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Cluster
                  </div>
                </span>
              </span>
              <div
                class="groupByItems"
              >
                Region
              </div>
              <div
                class="groupByItems activeItem"
              >
                Product
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Label
                  </div>
                </span>
              </span>
            </div>
          </section>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="align-items: center; justify-content: flex-end;"
          >
            <span
              class="bp3-icon bp3-icon-timeline-area-chart StyledProps--main StyledProps--color StyledProps--color-grey400"
              icon="timeline-area-chart"
            >
              <svg
                data-icon="timeline-area-chart"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  timeline-area-chart
                </desc>
                <path
                  d="M19 16H2V3c0-.55-.45-1-1-1s-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0-13.41l-7.07 7.07-4.3-3.44-.01.01A.987.987 0 007 6c-.24 0-.46.1-.63.24l-.01-.01L3 9.03V15h16V2.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-icon bp3-icon-timeline-bar-chart StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="timeline-bar-chart"
            >
              <svg
                data-icon="timeline-bar-chart"
                height="18"
                viewBox="0 0 16 16"
                width="18"
              >
                <desc>
                  timeline-bar-chart
                </desc>
                <path
                  d="M8 12h1c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1H8c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1zm5 0h1c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1h-1c-.55 0-1 .45-1 1v6c0 .55.45 1 1 1zm2 1H2c-.55 0-1 .45-1 1s.45 1 1 1h13c.55 0 1-.45 1-1s-.45-1-1-1zM3 12h1c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main emptyIllustrationContainer"
      >
        <img
          src="test-file-stub"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-large StyledProps--margin-bottom-xsmall StyledProps--font-small StyledProps--color StyledProps--color-grey500"
          style="font-weight: 600;"
        >
          ce.pageErrorMsg.noDataMsg
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small"
        >
          ce.pageErrorMsg.perspectiveNoData
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--background-white"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="justify-content: flex-end;"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="selectBtn"
                >
                  <span>
                    ce.gridColumnSelector
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </span>
          </span>
        </div>
        <div
          class="gridCtn"
        >
          <div
            class="table sticky"
            role="table"
          >
            <div
              class="header"
            >
              <div
                class="tr"
                role="row"
                style="display: flex; width: 650px;"
              >
                <div
                  class="th name"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 250px;"
                >
                  Name
                </div>
                <div
                  class="th"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 200px;"
                >
                  Total cost
                </div>
                <div
                  class="th cost-trend cost-column"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 200px;"
                >
                  Cost trend
                </div>
              </div>
            </div>
            <div
              class="body"
              role="rowgroup"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test cases for Perspective details Page should be able to render the details page 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                enable-background="new 0 0 8 14"
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/undefined/ce/perspectives"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                ce.perspectives.sideNavText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                enable-background="new 0 0 8 14"
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        AWS_GCP
      </h2>
    </div>
    <div
      class="StyledProps--font StyledProps--main headerContentSection StyledProps--padding-top-xlarge StyledProps--padding-left-xsmall"
    >
      <div
        class="StyledProps--font StyledProps--main headerContent"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
          data-icon="notification"
        >
          <svg
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12v-.793l.881-.881.721-.721.002-.002-.007-.006A3.968 3.968 0 014 7.5a4 4 0 118 0c0 .77-.22 1.488-.597 2.097l-.007.007.002.001.721.721.881.881V12H3zm5 2a1 1 0 01-1-1h2a1 1 0 01-1 1zm5.854-3.354l-1.236-1.235A4.954 4.954 0 0013 7.5a5.006 5.006 0 00-4.5-4.974V1.5h-1v1.026A5.006 5.006 0 003 7.5c0 .677.136 1.322.382 1.911l-1.236 1.235A.5.5 0 002 11v2h4c0 1.103.897 2 2 2s2-.897 2-2h4v-2a.5.5 0 00-.146-.354z"
              fill="#000"
              fill-rule="nonzero"
              opacity="0.6"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-left-xsmall StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
        >
          ce.perspectives.perspectiveReportsTxt
        </p>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
        icon="edit"
      >
        <svg
          data-icon="edit"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            edit
          </desc>
          <path
            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        edit
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-small StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ng-filter"
        >
          <svg
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 8V7H19a.5.5 0 0 0 0-1h-2.5V5a.5.5 0 0 0-1 0v1H5a.5.5 0 0 0 0 1h10.5v1a.5.5 0 0 0 1 0zM5 11.5h3v-1a.5.5 0 0 1 1 0v1h10a.5.5 0 0 1 0 1H9v1a.5.5 0 0 1-1 0v-1H5a.5.5 0 0 1 0-1zM5 17a.5.5 0 0 0 0 1h7v1a.5.5 0 0 0 1 0v-1h6a.5.5 0 0 0 0-1h-6v-1a.5.5 0 0 0-1 0v1H5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <section
            class="filtersContainer"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                + add filter
              </span>
            </button>
          </section>
        </div>
        <span
          style="flex-grow: 1;"
        />
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeRangeButton StyledProps--intent-primary StyledProps--padding-small Button--with-current-color Button--without-shadow Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    calendar
                  </desc>
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeRangeConstants.last7Days
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7"
        >
          |
        </p>
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main timeGranularityButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                ce.perspectives.timeAggregation.daily
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--margin-xlarge"
    >
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        />
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card cardContainer"
      >
        <div
          class="StyledProps--font StyledProps--main budgetCard"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-small"
          >
            ce.perspectives.budgets.title
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium"
          >
            $---
          </p>
          <p
            class="StyledProps--font StyledProps--main addBudgetText StyledProps--color StyledProps--color-primary7 StyledProps--font-small"
          >
            ce.perspectives.budgets.addBudget
          </p>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-1 Card--card"
      >
        <div
          class="StyledProps--font StyledProps--main mainCard"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-variation-small"
            >
              ce.recommendation.sideNavText
            </p>
            <span
              style="flex-grow: 1;"
            />
            <p
              class="StyledProps--font StyledProps--main viewLink StyledProps--color StyledProps--color-primary7 StyledProps--font-variation-small"
            >
              ce.perspectives.recommendations.viewText
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall StyledProps--font-variation-tiny"
          >
            ce.perspectives.recommendations.recommendationCountTxt
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-xsmall StyledProps--margin-bottom-xsmall StyledProps--font-variation-body1"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
              data-icon="money-icon"
            >
              <svg
                fill="none"
                height="21"
                viewBox="0 0 34 31"
                width="21"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="Money Icon"
                >
                  <ellipse
                    fill="#EFF2F4"
                    id="Oval"
                    rx="15.5165"
                    ry="2.31097"
                    transform="matrix(1 0 0 -1 15.5165 27.9595)"
                  />
                  <g
                    id="Group 21"
                  >
                    <rect
                      fill="#629D00"
                      height="12.1968"
                      id="Rectangle"
                      rx="4"
                      stroke="#629D00"
                      width="25.0905"
                      x="1.32056"
                      y="15.0841"
                    />
                    <rect
                      fill="#69C800"
                      height="12.1968"
                      id="Rectangle_2"
                      rx="4"
                      width="25.0905"
                      x="1.32056"
                      y="15.0841"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.68568"
                      id="Rectangle_3"
                      rx="4"
                      width="22.9997"
                      x="2.50513"
                      y="16.4476"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M6.22638 15.5146C4.01724 15.5146 2.22638 17.3055 2.22638 19.5146V20.2946C2.29322 18.1441 4.05762 16.4212 6.22442 16.4212H21.5722C23.7814 16.4212 25.5722 18.2121 25.5722 20.4212V24.1516C25.5735 24.1096 25.5742 24.0674 25.5742 24.0251V19.5146C25.5742 17.3055 23.7833 15.5146 21.5742 15.5146H6.22638Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape"
                    />
                    <ellipse
                      cx="5.92016"
                      cy="21.3074"
                      fill="#7ACE00"
                      id="Oval_2"
                      rx="1.39392"
                      ry="1.43492"
                    />
                    <ellipse
                      cx="22.0898"
                      cy="21.2734"
                      fill="#7ACE00"
                      id="Oval_3"
                      rx="1.39392"
                      ry="1.43492"
                    />
                    <ellipse
                      cx="14.1441"
                      cy="21.3984"
                      fill="#7ACE00"
                      id="Oval_4"
                      rx="3.4848"
                      ry="3.58729"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.9689 21.7227C15.9305 21.6084 15.8728 21.5016 15.796 21.4025C15.7192 21.3034 15.6232 21.2158 15.508 21.1357C15.3927 21.0595 15.2583 20.9985 15.1047 20.9528C15.0432 20.9375 14.9395 20.9109 14.7974 20.8766C14.6629 20.8423 14.517 20.8079 14.3672 20.7698C14.2174 20.7317 14.083 20.6974 13.96 20.6669C13.841 20.6364 13.7718 20.6212 13.7526 20.6174C13.5875 20.5716 13.453 20.5068 13.3493 20.4192C13.2456 20.3315 13.1957 20.2095 13.1957 20.0571C13.1957 19.9466 13.2226 19.8551 13.2764 19.7827C13.3301 19.7102 13.3993 19.6531 13.4838 19.6073C13.5683 19.5654 13.6605 19.5349 13.7603 19.5159C13.8602 19.4968 13.96 19.4854 14.0561 19.4854C14.3403 19.4854 14.5746 19.5425 14.759 19.6607C14.9433 19.775 15.047 19.977 15.0701 20.2553H15.892C15.892 20.0266 15.8421 19.8246 15.7461 19.6531C15.6501 19.4815 15.5195 19.3329 15.3543 19.2147C15.1892 19.0966 14.9971 19.0089 14.782 18.9479C14.6898 18.9251 14.5938 18.9098 14.4939 18.8946V18.4791C14.4939 18.2695 14.3211 18.098 14.1098 18.098C13.8986 18.098 13.7257 18.2695 13.7257 18.4791V18.8908C13.6374 18.9022 13.5491 18.9174 13.4646 18.9403C13.2572 18.9899 13.0728 19.0699 12.9115 19.1728C12.7501 19.2795 12.6196 19.4129 12.5197 19.573C12.4198 19.7369 12.3699 19.9275 12.3699 20.1447C12.3699 20.2591 12.3853 20.3696 12.4198 20.4802C12.4544 20.5907 12.5082 20.6936 12.5888 20.7927C12.6695 20.8918 12.7732 20.9795 12.9076 21.0595C13.0421 21.1395 13.2111 21.2043 13.4108 21.2539C13.7373 21.3339 14.01 21.3987 14.2328 21.4521C14.4555 21.5016 14.6476 21.5588 14.8166 21.6122C14.9126 21.6465 15.0006 21.6998 15.0812 21.7799C15.1623 21.8599 15.2045 21.9823 15.2045 22.1496C15.2045 22.2296 15.1853 22.3097 15.1507 22.3897C15.1162 22.4698 15.0586 22.5388 14.9779 22.5994C14.8972 22.6603 14.7974 22.7099 14.6668 22.748C14.54 22.7861 14.3864 22.8052 14.2059 22.8052C14.0407 22.8052 13.8832 22.7861 13.7411 22.7518C13.599 22.7175 13.4722 22.6603 13.3609 22.5883C13.2495 22.5117 13.165 22.4164 13.1035 22.2982C13.0421 22.1801 13.0113 22.0391 13.0113 21.8717H12.1932C12.197 22.1424 12.2508 22.3745 12.3584 22.5727C12.4621 22.7709 12.6042 22.931 12.7809 23.0567C12.9576 23.1825 13.1611 23.2778 13.3993 23.3388C13.503 23.3658 13.6144 23.3845 13.7257 23.3998V23.8152C13.7257 24.0249 13.8986 24.1964 14.1098 24.1964C14.3211 24.1964 14.4939 24.0249 14.4939 23.8152V23.415C14.6092 23.4036 14.7282 23.3845 14.8396 23.3578C15.0624 23.3083 15.2621 23.2282 15.4388 23.1177C15.6155 23.0072 15.7576 22.8662 15.8648 22.6946C15.9727 22.5235 16.0265 22.3135 16.0265 22.0696C16.0265 21.9518 16.0073 21.8371 15.9689 21.7227Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1"
                    />
                  </g>
                  <g
                    id="Group 21_2"
                  >
                    <rect
                      fill="#629D00"
                      height="11.9776"
                      id="Rectangle_4"
                      rx="4"
                      stroke="#629D00"
                      transform="rotate(21 6.63019 7.33658)"
                      width="25.1192"
                      x="6.63019"
                      y="7.33658"
                    />
                    <rect
                      fill="#69C800"
                      height="11.9776"
                      id="Rectangle_5"
                      rx="4"
                      transform="rotate(21 6.63019 7.33658)"
                      width="25.1192"
                      x="6.63019"
                      y="7.33658"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.51161"
                      id="Rectangle_6"
                      rx="4"
                      transform="rotate(21 7.25751 9.01164)"
                      width="23.026"
                      x="7.25751"
                      y="9.01164"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.0596 9.48977C8.99717 8.69808 6.68347 9.7282 5.89179 11.7906L5.61835 12.5029C6.45167 10.5196 8.71602 9.54376 10.7387 10.3202L25.092 15.8299C27.1545 16.6216 28.1846 18.9353 27.3929 20.9977L26.1305 24.2863C26.1469 24.2474 26.1627 24.208 26.178 24.1683L27.7138 20.1673C28.5055 18.1049 27.4753 15.7912 25.4129 14.9995L11.0596 9.48977Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape_2"
                    />
                    <ellipse
                      cx="8.73906"
                      cy="14.6924"
                      fill="#7ACE00"
                      id="Oval_5"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(21 8.73906 14.6924)"
                    />
                    <ellipse
                      cx="23.8639"
                      cy="20.4625"
                      fill="#7ACE00"
                      id="Oval_6"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(21 23.8639 20.4625)"
                    />
                    <ellipse
                      cx="16.3936"
                      cy="17.7263"
                      fill="#7ACE00"
                      id="Oval_7"
                      rx="3.48878"
                      ry="3.52282"
                      transform="rotate(21 16.3936 17.7263)"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M17.9849 18.6784C17.9892 18.5598 17.9729 18.4412 17.936 18.3228C17.8991 18.2044 17.8402 18.0896 17.7606 17.9749C17.6798 17.8636 17.5756 17.7595 17.4481 17.6624C17.396 17.6264 17.3085 17.5648 17.1877 17.4823C17.0741 17.4026 16.9498 17.3188 16.8232 17.2301C16.6966 17.1414 16.583 17.0618 16.4789 16.9897C16.3783 16.919 16.3191 16.8803 16.3025 16.8699C16.1642 16.7687 16.0614 16.661 15.9953 16.5435C15.9292 16.4259 15.9255 16.2961 15.9791 16.1564C16.018 16.055 16.0753 15.9808 16.1511 15.9337C16.2268 15.8866 16.3116 15.859 16.4066 15.8474C16.5004 15.8393 16.5973 15.8444 16.6973 15.8627C16.7974 15.8811 16.8947 15.9064 16.9845 15.9409C17.2501 16.0429 17.449 16.1794 17.5797 16.3538C17.7118 16.5248 17.7376 16.7472 17.6613 17.0106L18.4295 17.3055C18.51 17.0958 18.5344 16.8927 18.505 16.701C18.4756 16.5093 18.4059 16.3262 18.2931 16.1586C18.1803 15.991 18.0317 15.8417 17.8521 15.7086C17.774 15.6546 17.6896 15.6062 17.6016 15.5564L17.7478 15.1755C17.8216 14.9833 17.7204 14.764 17.523 14.6882C17.3255 14.6124 17.1036 14.7077 17.0298 14.8999L16.885 15.2773C16.7984 15.2561 16.7105 15.2383 16.6234 15.229C16.4121 15.2 16.2116 15.2072 16.0247 15.2437C15.8363 15.2837 15.6673 15.3591 15.5176 15.47C15.3666 15.5845 15.2529 15.7413 15.1764 15.9405C15.1362 16.0453 15.1116 16.1521 15.105 16.2659C15.0985 16.3796 15.1125 16.4933 15.153 16.6131C15.1935 16.7329 15.2596 16.8504 15.3571 16.972C15.4546 17.0937 15.5897 17.2137 15.759 17.3308C16.0359 17.5213 16.268 17.6785 16.4575 17.8074C16.6482 17.9327 16.8076 18.0541 16.9468 18.1636C17.0245 18.2295 17.0879 18.31 17.1351 18.4123C17.1827 18.5148 17.1791 18.6421 17.1202 18.7955C17.0921 18.8689 17.046 18.9354 16.9855 18.9964C16.925 19.0573 16.8469 19.0999 16.7502 19.1265C16.6533 19.1535 16.5425 19.1631 16.4071 19.1512C16.2752 19.1407 16.1249 19.103 15.9561 19.0383C15.8018 18.979 15.6613 18.905 15.5405 18.8226C15.4198 18.7402 15.3214 18.6423 15.2427 18.5363C15.1655 18.4261 15.1201 18.3084 15.1042 18.178C15.0884 18.0476 15.1093 17.9073 15.1682 17.7539L14.4035 17.4604C14.3119 17.7099 14.2804 17.942 14.3112 18.1623C14.3384 18.3812 14.4149 18.5789 14.5357 18.7576C14.6566 18.9363 14.8133 19.0967 15.0145 19.2381C15.1019 19.3001 15.1994 19.3572 15.2981 19.4111L15.1519 19.792C15.0782 19.9842 15.1793 20.2035 15.3768 20.2793C15.5742 20.355 15.7961 20.2598 15.8699 20.0676L16.0108 19.7007C16.1225 19.7316 16.2405 19.7568 16.354 19.7723C16.5796 19.8068 16.7945 19.8051 16.9985 19.7671C17.2026 19.7292 17.385 19.6509 17.5455 19.5321C17.7066 19.4139 17.8308 19.2407 17.9167 19.017C17.9581 18.9091 17.9805 18.797 17.9849 18.6784Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1_2"
                    />
                  </g>
                  <g
                    id="Group 21_3"
                  >
                    <rect
                      fill="#629D00"
                      height="11.9776"
                      id="Rectangle_7"
                      rx="4"
                      stroke="#629D00"
                      transform="rotate(52 17.5758 1)"
                      width="25.1192"
                      x="17.5758"
                      y="1"
                    />
                    <rect
                      fill="#69C800"
                      height="11.9776"
                      id="Rectangle_8"
                      rx="4"
                      transform="rotate(52 17.5758 1)"
                      width="25.1192"
                      x="17.5758"
                      y="1"
                    />
                    <rect
                      fill="#AADE63"
                      height="9.51161"
                      id="Rectangle_9"
                      rx="4"
                      transform="rotate(52 17.2508 2.75891)"
                      width="23.026"
                      x="17.2508"
                      y="2.75891"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M20.2636 5.12695C18.9035 3.38613 16.3897 3.07747 14.6489 4.43755L14.0474 4.9075C15.7832 3.63641 18.2269 3.96613 19.5608 5.67349L29.0263 17.7888C30.3864 19.5296 30.0778 22.0434 28.3369 23.4035L25.5613 25.572C25.5954 25.5471 25.6291 25.5216 25.6626 25.4954L29.0397 22.8569C30.7805 21.4969 31.0892 18.9831 29.7291 17.2422L20.2636 5.12695Z"
                      fill="#D6F4BC"
                      fill-rule="evenodd"
                      id="Combined Shape_3"
                    />
                    <ellipse
                      cx="15.595"
                      cy="8.3913"
                      fill="#7ACE00"
                      id="Oval_8"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(52 15.595 8.3913)"
                    />
                    <ellipse
                      cx="25.5876"
                      cy="21.1272"
                      fill="#7ACE00"
                      id="Oval_9"
                      rx="1.39551"
                      ry="1.40913"
                      transform="rotate(52 25.5876 21.1272)"
                    />
                    <ellipse
                      cx="20.5935"
                      cy="14.9343"
                      fill="#7ACE00"
                      id="Oval_10"
                      rx="3.48878"
                      ry="3.52282"
                      transform="rotate(52 20.5935 14.9343)"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M21.4672 16.5699C21.532 16.4705 21.5791 16.3605 21.6085 16.24C21.6378 16.1195 21.6464 15.9907 21.6374 15.8514C21.6253 15.7144 21.5897 15.5715 21.5304 15.4226C21.5043 15.3649 21.461 15.267 21.4 15.1341C21.3436 15.0073 21.2802 14.8714 21.2174 14.7302C21.1546 14.589 21.0982 14.4622 21.0461 14.3468C20.9963 14.2344 20.9655 14.1707 20.9566 14.1532C20.8902 13.9953 20.8575 13.85 20.8614 13.7152C20.8653 13.5804 20.9289 13.4673 21.0469 13.3751C21.1324 13.3083 21.2198 13.2742 21.309 13.2728C21.3982 13.2715 21.485 13.2914 21.5725 13.3304C21.657 13.3718 21.7374 13.426 21.8137 13.4933C21.89 13.5606 21.9604 13.6324 22.0196 13.7082C22.1948 13.9324 22.295 14.1518 22.3172 14.3687C22.3423 14.5833 22.2499 14.7873 22.0488 14.9737L22.5554 15.6221C22.7324 15.4838 22.858 15.3223 22.9315 15.1429C23.0051 14.9634 23.0396 14.7705 23.0292 14.5688C23.0189 14.367 22.9683 14.1625 22.8829 13.956C22.8438 13.8694 22.7964 13.7845 22.7467 13.6965L23.0682 13.4453C23.2304 13.3185 23.2566 13.0785 23.1264 12.9118C22.9962 12.7451 22.7569 12.7125 22.5947 12.8392L22.2761 13.0881C22.2128 13.0253 22.1466 12.9649 22.0768 12.912C21.9106 12.7783 21.7351 12.6813 21.556 12.6162C21.374 12.5535 21.1902 12.5311 21.0048 12.5491C20.8164 12.5694 20.6382 12.6453 20.47 12.7766C20.3816 12.8457 20.3055 12.9247 20.2413 13.0188C20.177 13.1129 20.1305 13.2175 20.1036 13.3411C20.0766 13.4646 20.0727 13.5994 20.0936 13.7539C20.1145 13.9083 20.1685 14.0808 20.2533 14.2684C20.3926 14.5743 20.5105 14.8287 20.6066 15.0367C20.7055 15.2424 20.7797 15.4284 20.8425 15.594C20.8752 15.6905 20.8881 15.7922 20.8759 15.9042C20.8639 16.0165 20.7952 16.1238 20.6658 16.225C20.6038 16.2734 20.53 16.3066 20.4468 16.3278C20.3636 16.3489 20.2747 16.3451 20.178 16.3181C20.0811 16.2914 19.9812 16.2426 19.8713 16.1626C19.7636 16.0856 19.6542 15.9759 19.5429 15.8335C19.4411 15.7032 19.3588 15.5675 19.2977 15.4346C19.2367 15.3018 19.2028 15.1672 19.1899 15.0358C19.1805 14.9016 19.2022 14.7773 19.2557 14.6574C19.3093 14.5375 19.3995 14.4279 19.529 14.3268L19.0247 13.6814C18.8177 13.848 18.6712 14.0308 18.5841 14.2354C18.4946 14.4371 18.4584 14.646 18.4699 14.8614C18.4815 15.0768 18.5332 15.2951 18.6328 15.5198C18.6758 15.618 18.73 15.7171 18.7869 15.8142L18.4654 16.0654C18.3031 16.1922 18.2769 16.4322 18.4072 16.5989C18.5374 16.7655 18.7766 16.7982 18.9388 16.6715L19.2485 16.4295C19.3284 16.5135 19.4166 16.5959 19.5059 16.6676C19.6815 16.8134 19.8666 16.9226 20.061 16.9952C20.2554 17.0677 20.4522 17.0946 20.6509 17.0754C20.8499 17.0571 21.0456 16.9726 21.2343 16.8251C21.3255 16.7539 21.4024 16.6694 21.4672 16.5699Z"
                      fill="white"
                      fill-rule="evenodd"
                      id="Fill 1_3"
                    />
                  </g>
                </g>
              </svg>
            </span>
            $283.86
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-variation-tiny"
          >
            ce.perspectives.recommendations.perMonth
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main chartGridContainer StyledProps--margin-xlarge StyledProps--background-white"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-small"
      >
        <div
          class="StyledProps--font StyledProps--main groupByContainer StyledProps--background-white StyledProps--padding-small"
        >
          <section
            class="groupByContainer"
          >
            <label
              class="groupByLabel"
            >
               
              ce.perspectives.createPerspective.preview.groupBy
            </label>
            <div
              class="groupBys"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Cluster
                  </div>
                </span>
              </span>
              <div
                class="groupByItems"
              >
                Region
              </div>
              <div
                class="groupByItems activeItem"
              >
                Product
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="groupByItems"
                  >
                    Label
                  </div>
                </span>
              </span>
            </div>
          </section>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            style="align-items: center; justify-content: flex-end;"
          >
            <span
              class="bp3-icon bp3-icon-timeline-area-chart StyledProps--main StyledProps--color StyledProps--color-grey400"
              icon="timeline-area-chart"
            >
              <svg
                data-icon="timeline-area-chart"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  timeline-area-chart
                </desc>
                <path
                  d="M19 16H2V3c0-.55-.45-1-1-1s-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0-13.41l-7.07 7.07-4.3-3.44-.01.01A.987.987 0 007 6c-.24 0-.46.1-.63.24l-.01-.01L3 9.03V15h16V2.59z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-icon bp3-icon-timeline-bar-chart StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="timeline-bar-chart"
            >
              <svg
                data-icon="timeline-bar-chart"
                height="18"
                viewBox="0 0 16 16"
                width="18"
              >
                <desc>
                  timeline-bar-chart
                </desc>
                <path
                  d="M8 12h1c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1H8c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1zm5 0h1c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1h-1c-.55 0-1 .45-1 1v6c0 .55.45 1 1 1zm2 1H2c-.55 0-1 .45-1 1s.45 1 1 1h13c.55 0 1-.45 1-1s-.45-1-1-1zM3 12h1c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div>
          <article>
            <mock
              options="[object Object]"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
                />
              </svg>
            </span>
          </article>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--background-white"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="justify-content: flex-end;"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="selectBtn"
                >
                  <span>
                    ce.gridColumnSelector
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </span>
          </span>
        </div>
        <div
          class="gridCtn"
        >
          <div
            class="table sticky"
            role="table"
          >
            <div
              class="header"
            >
              <div
                class="tr"
                role="row"
                style="display: flex; width: 650px;"
              >
                <div
                  class="th name"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 250px;"
                >
                  Name
                </div>
                <div
                  class="th"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 200px;"
                >
                  Total cost
                </div>
                <div
                  class="th cost-trend cost-column"
                  colspan="1"
                  role="columnheader"
                  style="display: inline-block; box-sizing: border-box; width: 200px;"
                >
                  Cost trend
                </div>
              </div>
            </div>
            <div
              class="body"
              role="rowgroup"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
